fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html {
 	height:100%;
+	overflow-x:hidden;
 }
 body {
 	height:100%;
